Worked through most deprecated APIs except for Observable/Observer